Switch to SQLite and add initial migration
Migrated the database context to use SQLite instead of SQL Server. Added an initial migration for creating the TaskModel table. Also included tests to verify the TaskController behavior.

--- a/TodoApp.API/appsettings.json
+++ b/TodoApp.API/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "APIContext": "Server=(localdb)\\mssqllocaldb;Database=APIContext-2a84a3fb-f4b4-4a73-befb-25005c6d0c02;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DataContext": "Server=(localdb)\\mssqllocaldb;Database=DataContext-82cb81ea-b47d-4c68-900e-a659a963ba36;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=TodoApp.db"
   }
 }
