--- a/TodoApp.Tests/TodoApp.Tests.csproj
+++ b/TodoApp.Tests/TodoApp.Tests.csproj
@@ -20,4 +20,8 @@
         <Using Include="Xunit"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TodoApp.API\TodoApp.API.csproj" />
+    </ItemGroup>
+
 </Project>
